2nd meeting update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
 </nav>
 <div class="row">
   <div class="col-3 col-table">
-    <table class="table table-sm">
+    <table class="table table-sm table-striped">
       <thead>
       <tr>
-        <th class="col-id">User Id</th>
+        <th class="col-id">UserId</th>
         <th scope="col">Lat</th>
         <th scope="col">Long</th>
       </tr>
