--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,12 @@
 
 .map {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .3);
   z-index: 0;
   padding: 0;
   width: 100%;
   height: 95%;
-  border: gray ridge 5px;
+  border: gray 5px;
+  border-radius: 1rem;
 }
 
 .col-map {
@@ -56,8 +57,8 @@ td:hover {
   width: 70%;
 }
 
-table {
-  width: 22vw;
+d-data-table {
+  width: 16vw;
   border-top: 1rem solid transparent;
-  border-left: 3rem solid transparent;
+  border-left: 1rem solid transparent;
 }
