move users table to map

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,8 @@
 <!-- Just an image -->
-<aside class="flex h-screen w-64 flex-col overflow-y-auto border-r bg-white px-5 py-8" style="padding: 1rem">
+<nav class="flex h-screen w-64 flex-col overflow-y-auto border-r bg-white px-5 py-8" style="padding: 1rem">
   <img src="assets/svg/map-svgrepo-com.svg" class="d-inline-block align-top" width="30" height="30" alt="">
   Project X
-  <div class="row">
-    <div class="col-12">
-    </div>
-  </div>
-</aside>
+</nav>
 
 
 <div class="container-fluid">
