--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,5 @@
 
+
 .map {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .3);
   z-index: 0;
@@ -11,7 +12,7 @@
 
 .col-map {
   margin: 1rem;
-  width: 95%;
+  width: calc(100% - 2rem);
   height: 90%;
   position: absolute;
   display: flex;
@@ -34,11 +35,13 @@
 }
 
 nav {
-  /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2);*/
+  background-color:  #f0f8ff;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2);
   height: 4rem;
   z-index: 1;
   flex: 0 1 auto;
   position: relative;
+  overflow-y: hidden  ;
 }
 
 td {
