code clean up, styling

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,7 @@
-
+:host {
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
 
 .map {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .3);
@@ -11,10 +14,10 @@
 }
 
 .col-map {
-  margin: 1rem;
-  width: calc(100% - 2rem);
-  height: 90%;
-  position: absolute;
+  margin: 1rem 0rem 1rem 1rem;
+  width: 80vw;
+  padding-right:0;
+  height: 90vh;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -25,7 +28,7 @@
 }
 
 .row {
-  width: 100%;
+  width: 117%;
   flex: 0 1 auto;
   min-height: 90%
 }
@@ -34,38 +37,3 @@
   padding-left: 1rem;
 }
 
-nav {
-  background-color:  #f0f8ff;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2);
-  height: 4rem;
-  z-index: 1;
-  flex: 0 1 auto;
-  position: relative;
-  overflow-y: hidden  ;
-}
-
-td {
-  max-width: 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-td:hover {
-  text-overflow: unset;
-  overflow: unset;
-  white-space: normal;
-}
-
-.col-id {
-  width: 30%;
-}
-
-.col-marker {
-  width: 70%;
-}
-
-d-data-table {
-  width: 16vw;
-  border-top: 1rem solid transparent;
-  border-left: 1rem solid transparent;
-}
